# Week2_Deliverables

./: .env  .env.example  README.md  requirements.txt
ChatBot/: app.py  dhanush_chat_history.db
RAG/: app.py  pyproject.toml
RAG/data/: urls.txt
RAG/src/config/: config.py
RAG/src/nodes/: reactnode.py
src/doc_ingestion/: doc_processor.py
src/graph_builder/: graph_build.py
src/state/: rag_state.py
src/vector_store/: vstore.py
